<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_weight="0"
        android:background="@drawable/back"
        android:focusable="auto"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="#2B2B2B"
            android:focusable="auto"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:focusable="auto"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="3dp"
                    android:layout_weight="1" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/equalsText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/textSize" />
            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_equals"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/button_equals" />

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_plus"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/plus"
            android:textSize="@dimen/textSize" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/_1"
            android:textSize="@dimen/textSize" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:marqueeRepeatLimit="marquee_forever"
            android:text="@string/_2"
            android:textSize="@dimen/textSize" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_3"

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/_3"
            android:textSize="@dimen/textSize" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_minus"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/minus"
            android:textSize="@dimen/textSize" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/_4"
            android:textSize="@dimen/textSize" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/_5" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_6"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/_6"
            android:textSize="@dimen/textSize" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_multiply"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:text="@string/multitply"
            android:textSize="@dimen/textSize" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_7"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:text="@string/_7"
            android:textSize="@dimen/textSize" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_8"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:text="@string/_8"
            android:textSize="@dimen/textSize" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_9"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:text="@string/_9"
            android:textSize="@dimen/textSize" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_divide"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:text="@string/divide"
            android:textSize="@dimen/textSize" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_0"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:text="@string/_0"
            android:textSize="@dimen/textSize" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_point"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:text="@string/point"
            android:textSize="@dimen/textSize" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_clear"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:text="@string/clear"
            android:textSize="@dimen/textSize" />
    </LinearLayout>


</LinearLayout>